<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.home.HomeFragment">

    <LinearLayout
        android:animateLayoutChanges="true"
        android:id="@+id/welcome_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_24"
        android:layout_marginTop="@dimen/margin_16"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/greeting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/nunito_bold"
                android:text="@string/hi_george"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_16" />

            <TextView
                android:id="@+id/label_clocked_in"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="@dimen/margin_4"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/clocked_in"
                android:textColor="@color/splash_bg"
                android:textSize="@dimen/text_12" />
        </LinearLayout>

        <TextView
            android:id="@+id/clock_in_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_4"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/clock_in_to_begin_your_task"
            android:textColor="@color/colorTextPrimary"
            android:textSize="@dimen/text_16" />
    </LinearLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/wave_image"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginEnd="@dimen/margin_16"
        android:contentDescription="@string/clock_in_to_begin_your_task"
        app:layout_constraintBottom_toBottomOf="@+id/welcome_layout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/welcome_layout"
        app:srcCompat="@drawable/alarm" />

    <LinearLayout
        android:id="@+id/clock_layout"
        android:animateLayoutChanges="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/margin_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/welcome_layout">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_clock_in"
            android:visibility="visible"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_32"
            android:backgroundTint="@color/colorAccent"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/clock_in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcome_layout" />

        <LinearLayout
            android:id="@+id/take_break_layout"
            android:visibility="gone"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.button.MaterialButton
                android:id="@+id/take_break_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/padding_24"
                android:layout_marginHorizontal="@dimen/margin_24"
                android:backgroundTint="@color/yellow"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/take_a_break"
                android:textAllCaps="false"
                android:textColor="@color/white"/>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/clock_out_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingHorizontal="@dimen/margin_32"
                android:layout_marginHorizontal="@dimen/margin_32"
                android:backgroundTint="@color/red"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/clock_out"
                android:textAllCaps="false"
                android:textColor="@color/white" />
        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_layout"
        style="@style/CustomTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/margin_16"
        android:layout_marginTop="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/clock_layout">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/medication" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/activities" />

    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager2.widget.ViewPager2
        android:id="@+id/view_pager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/margin_16"
        app:layout_constraintEnd_toEndOf="@+id/tab_layout"
        app:layout_constraintStart_toStartOf="@+id/tab_layout"
        app:layout_constraintTop_toBottomOf="@+id/tab_layout"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>