<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
android:backgroundTint="@color/white"
tools:context=".features.login.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:id="@+id/welcome_layout"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginStart="@dimen/margin_24">

                    <TextView
                        android:id="@+id/label_account_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/welcome_back"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_32"
                        android:fontFamily="@font/nunito_bold"/>

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/wave_image"
                        android:layout_width="35dp"
                        android:layout_height="35dp"
                        app:srcCompat="@drawable/wave"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        android:contentDescription="@string/caresaas_logo" />
                </LinearLayout>

                <TextView
                    android:id="@+id/fill_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_4"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/fill_your_details_to_get_started"
                    android:textColor="@color/colorTextPrimary"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/welcome_layout" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/email_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_60"
                    android:layout_marginEnd="@dimen/margin_24"
                    app:hintEnabled="false"
                    app:boxStrokeColor="@color/colorTextPrimary"
                    app:endIconMode="custom"
                    app:hintTextColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/fill_details"
                    app:layout_constraintTop_toBottomOf="@+id/fill_details">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/username"
                        android:text="a.clementia"
                        android:inputType="textEmailAddress"
                        android:textColorHint="@color/colorTextPrimary" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/pass_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:backgroundTint="@color/white"
                    app:hintEnabled="false"
                    app:boxStrokeColor="@color/colorTextPrimary"
                    app:hintTextColor="@color/colorTextPrimary"
                    app:layout_constraintEnd_toEndOf="@+id/email_layout"
                    app:layout_constraintStart_toStartOf="@+id/email_layout"
                    app:layout_constraintTop_toBottomOf="@+id/email_layout"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/white"
                        android:fontFamily="@font/roboto_regular"
                        android:inputType="textPassword"
                        android:hint="@string/password"
                        android:text="Custom123$"
                        android:textColorHint="@color/colorTextPrimary"/>

                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:id="@+id/forgot_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/margin_24"
                    android:layout_marginTop="@dimen/margin_24"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/forgot_password"
                    android:textColor="@color/red"
                    android:textSize="@dimen/text_16"
                    app:layout_constraintEnd_toEndOf="@+id/pass_layout"
                    app:layout_constraintTop_toBottomOf="@+id/pass_layout" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/button_sign_in"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:backgroundTint="@color/colorAccent"
                    android:fontFamily="@font/roboto_regular"
                    android:text="@string/sign_in"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintEnd_toEndOf="@+id/pass_layout"
                    app:layout_constraintStart_toStartOf="@+id/pass_layout"
                    app:layout_constraintTop_toBottomOf="@+id/forgot_password" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_24"
                    android:orientation="horizontal"
                    android:gravity="center"
                    app:layout_constraintEnd_toEndOf="@+id/button_sign_in"
                    app:layout_constraintStart_toStartOf="@+id/button_sign_in"
                    app:layout_constraintTop_toBottomOf="@+id/button_sign_in">

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/question_tv"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="@dimen/margin_4"
                        android:fontFamily="@font/roboto_regular"
                        android:text="@string/don_t_have_an_account"
                        android:textColor="@color/colorTextPrimary"
                        android:textSize="@dimen/text_16"
                        app:layout_constraintBottom_toBottomOf="parent" />

                    <TextView
                        android:id="@+id/text_view_contact_support"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:fontFamily="@font/roboto_medium"
                        android:text="@string/contact_support"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_16" />
                </LinearLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.core.widget.NestedScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_24"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="@dimen/margin_50"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/text_terms"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:fontFamily="@font/roboto_regular"
                android:textAlignment="center"
                android:textColor="@color/colorTextPrimary"
                android:textSize="@dimen/text_16" />
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>